--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Main</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="main.js"></script>
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64 128x128 256x256" href="/favicon.ico">
+  <script src="/main.js"></script>
 </head>
 
 <body>
